--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,7 @@ cryptography~=44.0.2
 pillow~=11.1.0
 pandas~=2.2.3
 pdfplumber~=0.11.6
+Flask~=3.1.0
+logging~=0.4.9.6
+numpy~=2.2.4
+flask-cors~=5.0.1
